--- a/app/src/main/res/drawable/bg_green_corner_16.xml
+++ b/app/src/main/res/drawable/bg_green_corner_16.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/bg_green"/>
-    <corners android:radius="16dp"/>
+    <solid android:color="#9fd7f9"/>
+    <corners android:radius="20dp"/>
 </shape>
