--- a/app/src/main/res/layout/activity_admin_product.xml
+++ b/app/src/main/res/layout/activity_admin_product.xml
@@ -254,7 +254,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
-                android:background="#2f3542"
+                android:background="@drawable/custombutton"
                 android:text="@string/update"
                 android:textColor="#ffffff"
                 android:textSize="20sp"
@@ -265,7 +265,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
-                android:background="#2f3542"
+                android:background="@drawable/custombutton"
                 android:text="Delete"
                 android:textColor="#ffffff"
                 android:textSize="20sp"
