--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -74,14 +74,20 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#fff"
                 android:orientation="vertical">
 
-                <ImageView
+                <androidx.viewpager.widget.ViewPager
+                    android:id="@+id/view_pager"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/ecommerce_bg_2022" />
-
+                    android:layout_height="220dp"/>
+                <me.relex.circleindicator.CircleIndicator
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:id="@+id/circle_indicator"
+                    android:background="#ffff"
+                    app:ci_drawable="@drawable/bg_indicator"
+                    android:layout_height="20dp"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
