--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="5sp"
-    android:background="#f3e5f5"
+    android:background="#9fd7f9"
     android:orientation="horizontal"
     android:layout_marginTop="10dp"
     android:paddingTop="10dp"
