--- a/app/src/main/res/layout/activity_admin_discount.xml
+++ b/app/src/main/res/layout/activity_admin_discount.xml
@@ -196,7 +196,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
 
-                android:text="@string/update"
+                android:text="Update"
                 android:textColor="#ffffff"
                 android:background="@drawable/custombutton"
                 android:textSize="20sp"
