--- a/app/src/main/res/layout/admin_discount_listview.xml
+++ b/app/src/main/res/layout/admin_discount_listview.xml
@@ -18,7 +18,7 @@
             android:layout_centerVertical="true"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Id Discount"
+            android:text="Id "
             android:textSize="20dp" />
 
         <TextView
