--- a/app/src/main/res/layout/activity_bar_chart.xml
+++ b/app/src/main/res/layout/activity_bar_chart.xml
@@ -45,7 +45,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Thống kê sản phẩm"
+            android:text="Thống kê đơn hàng"
             android:textAllCaps="false" />
 
         <Button
@@ -69,7 +69,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Thống kê mua hàng"
+            android:text="Thống kê doanh thu"
             android:textAllCaps="false" />
 
     </LinearLayout>
